--- a/index.html
+++ b/index.html
@@ -1,3 +1,73 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio Pam</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #ff7e5f; /* atardecer estilo sunset */
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h2, h3, h4 {
+      color: #ff7e5f;
+    }
+
+    section {
+      background-color: white;
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style: square inside;
+      line-height: 1.6;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    a {
+      color: #ff7e5f;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Portfolio de Pam</h1>
+</header>
+
 <section id="monkeypox">
   <h2>Análisis de casos de Monkeypox – Mini proyecto HealthTech</h2>
 
@@ -8,16 +78,21 @@
   <p>Se analizaron los casos confirmados a nivel global para observar tendencias temporales, distribución geográfica y rango de edad.</p>
 
   <h4>Evolución temporal del brote</h4>
-  <img src="grafico_evolucion.png" alt="Evolución temporal de casos" style="max-width:100%; height:auto;">
+  <img src="grafico_evolucion.png" alt="Evolución temporal de casos">
 
   <h4>Distribución geográfica (Top 10 países)</h4>
-  <img src="grafico_paises.png" alt="Distribución por país" style="max-width:100%; height:auto;">
+  <img src="grafico_paises.png" alt="Distribución por país">
 
   <h4>Distribución por edad</h4>
-  <img src="grafico_edad.png" alt="Distribución por edad" style="max-width:100%; height:auto;">
+  <img src="grafico_edad.png" alt="Distribución por edad">
 
   <h3>Conclusiones:</h3>
   <ul>
     <li>Los países con más casos son España, Estados Unidos y Alemania, inclinandose a la población de adultos jóvenes,</li> 
     <li>teniendo un mayor contagio a finales de verano y principios de invierno.</li>
   </ul>
+
+</section>
+
+</body>
+</html>
